// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`courses page does not show empty state when at least one course is found 1`] = `
[
  <div
    className="flex w-screen h-screen text-gray-700"
  >
    <div
      className="flex flex-col flex-grow"
    >
      <div
        className="navbar bg-base-100 border-b"
      >
        <div
          className="navbar-start"
        >
          <div
            className="dropdown"
          >
            <label
              className="btn btn-ghost lg:hidden"
              tabIndex={0}
            >
              <svg
                className="h-5 w-5"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 6h16M4 12h8m-8 6h16"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                />
              </svg>
            </label>
            <ul
              className="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52"
              tabIndex={0}
            >
              <li>
                <a
                  className="flex"
                  href="/courses"
                  onClick={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    stroke="currentColor"
                    strokeWidth={1.5}
                    viewBox="0 0 24 24"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 6.042A8.967 8.967 0 006 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 016 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 016-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0018 18a8.967 8.967 0 00-6 2.292m0-14.25v14.25"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                  <span>
                    Courses
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="flex"
                  href="/educado_admin/applications"
                  onClick={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    stroke="currentColor"
                    strokeWidth={1.5}
                    viewBox="0 0 24 24"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9 12.75L11.25 15 15 9.75m-3-7.036A11.959 11.959 0 013.598 6 11.99 11.99 0 003 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285z"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                  <span>
                    Admin
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <a
            className="flex flex-shrink-0 items-center space-x-3 normal-case text-xl"
            href="/"
            onClick={[Function]}
          >
            <img
              alt="ecs-logo"
              className="h-6"
              src=""
            />
          </a>
        </div>
        <div
          className="navbar-center hidden lg:flex"
        >
          <ul
            className="menu menu-horizontal p-0"
          >
            <li>
              <a
                className="flex tooltip tooltip-hover tooltip-bottom"
                data-tip="see your courses"
                href="/courses"
                onClick={[Function]}
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth={1.5}
                  viewBox="0 0 24 24"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 6.042A8.967 8.967 0 006 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 016 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 016-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0018 18a8.967 8.967 0 00-6 2.292m0-14.25v14.25"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
                <span>
                  Courses
                </span>
              </a>
            </li>
            <li>
              <a
                className="flex tooltip tooltip-hover tooltip-bottom"
                data-tip="Check Applications"
                href="/educado_admin/applications"
                onClick={[Function]}
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth={1.5}
                  viewBox="0 0 24 24"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 12.75L11.25 15 15 9.75m-3-7.036A11.959 11.959 0 013.598 6 11.99 11.99 0 003 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285z"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
                <span>
                  Admin
                </span>
              </a>
            </li>
          </ul>
        </div>
        <div
          className="navbar-end"
        >
          <button
            className="relative ml-auto text-sm focus:outline-none group"
          >
            <div
              className="dropdown dropdown-end"
            >
              <label
                className="btn btn-ghost hover:bg-transparent"
                tabIndex={0}
              >
                <div
                  className="flex items-center justify-between w-10 h-10 rounded"
                >
                  <div
                    className="block relative"
                  >
                    <div
                      className="avatar placeholder"
                    >
                      <div
                        className="bg-blue-500 text-white rounded-full hover:rounded w-10"
                      >
                        <span
                          className="text-md"
                        >
                          JD
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
              <ul
                className="menu dropdown-content p-2 shadow bg-base-100 rounded-box w-52 mt-4"
                tabIndex={0}
              >
                <li>
                  <a
                    href="/profile"
                    onClick={[Function]}
                  >
                    Settings
                  </a>
                </li>
                <li>
                  <a
                    className="w-full px-4 py-2 text-left hover:bg-blue-500 hover:text-white"
                    href="/login"
                    onClick={[Function]}
                  >
                    Sign out
                  </a>
                </li>
              </ul>
            </div>
          </button>
        </div>
      </div>
      <main
        className="flex-grow overflow-x-hidden bg-gradient-to-br from-[#c8e5ec] to-[white]"
      >
        <div
          className="grid lg:grid-cols-[3fr_1fr] h-full"
        >
          <div
            className="m-8 p-8 pb-0 bg-white rounded-xl overflow-hidden flex flex-col"
          >
            <div
              className="flex flex-row no-wrap"
            >
              <h1
                className="text-3xl font-bold flex-1"
              >
                Confira seus cursos
              </h1>
              <label
                className="std-button flex modal-button  space-x-2"
                htmlFor="course-create"
              >
                <svg
                  aria-hidden="true"
                  className="w-5 h-5"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth={1.5}
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
                <p
                  className="font-normal "
                >
                  Criar novo curso
                </p>
                 
              </label>
              <input
                className="modal-toggle"
                id="course-create"
                type="checkbox"
              />
              <div
                className="modal"
                id="course-create-modal"
              >
                <div
                  className="modal-box bg-gradient-to-b from-primaryLight rounded w-11/12 max-w-xl"
                >
                  <h3
                    className="font-bold text-lg"
                  >
                    Crie seu novo curso!
                  </h3>
                   
                  <p
                    className="py-4"
                  >
                    Preencha o formulário e comece seu novo curso!
                  </p>
                   
                  <form
                    className="flex h-full flex-col justify-between space-y-4"
                    onSubmit={[Function]}
                  >
                    <div
                      className="flex flex-col space-y-2 text-left"
                    >
                      <label
                        htmlFor="title"
                      >
                        Título
                      </label>
                       
                      <input
                        className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                        defaultValue=""
                        name="title"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="text"
                      />
                       
                    </div>
                    <div
                      className="flex flex-col space-y-2 text-left"
                    >
                      <label
                        htmlFor="category"
                      >
                        Categoria
                      </label>
                       
                      <select
                        className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                        defaultValue="personal finance"
                        name="category"
                        onBlur={[Function]}
                        onChange={[Function]}
                      >
                        <option
                          value="personal finance"
                        >
                          Finanças pessoais
                        </option>
                        <option
                          value="health and workplace safety"
                        >
                          Saúde e Segurança no Trabalho
                        </option>
                        <option
                          value="sewing"
                        >
                          Costura
                        </option>
                        <option
                          value="electronics"
                        >
                          Eletrônica
                        </option>
                      </select>
                       
                    </div>
                    <div
                      className="flex items-center gap-8 w-full mt-8"
                    >
                      <div
                        className="flex flex-col space-y-2 text-left"
                      >
                        <label
                          htmlFor="cover-image"
                        >
                          Imagem de capa
                        </label>
                         
                        <div>
                          <div
                            className="mt-1 flex justify-center rounded-md border-2 border-dashed border-gray-600 px-10 pt-5 pb-6"
                          >
                            <div
                              className="space-y-1 text-center"
                            >
                              <svg
                                aria-hidden="true"
                                className="mx-auto h-6 w-6 text-gray-600"
                                fill="none"
                                stroke="currentColor"
                                viewBox="0 0 48 48"
                              >
                                <path
                                  d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                  strokeWidth={2}
                                />
                              </svg>
                              <div
                                className="flex text-sm text-gray-600"
                              >
                                <label
                                  className="relative cursor-pointer rounded-md  font-medium text-primary focus-within:outline-none focus-within:ring-2 focus-within:ring-primary focus-within:ring-offset-2 hover:text-primaryHover"
                                  htmlFor="file-upload"
                                >
                                  <span>
                                    Upload a file 
                                  </span>
                                  <input
                                    accept="image/*"
                                    className="sr-only"
                                    id="file-upload"
                                    name="file-upload"
                                    onChange={[Function]}
                                    type="file"
                                  />
                                </label>
                              </div>
                            </div>
                          </div>
                        </div>
                         
                         
                      </div>
                      <div
                        className="flex flex-col space-y-2 text-left"
                      >
                        <label
                          htmlFor="level"
                        >
                          Nível
                        </label>
                         
                        <select
                          className="small-form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                          name="difficulty"
                          onBlur={[Function]}
                          onChange={[Function]}
                        >
                          <option
                            value={1}
                          >
                            Iniciante 
                          </option>
                           
                          <option
                            value={2}
                          >
                            Intermediário
                          </option>
                           
                          <option
                            value={3}
                          >
                            Avançado 
                          </option>
                           
                        </select>
                         
                      </div>
                      <div
                        className="flex flex-col space-y-2 text-left"
                      >
                        <label
                          htmlFor="title"
                        >
                          Tempo estimado
                        </label>
                         
                        <input
                          className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                          defaultValue=""
                          min={0}
                          name="estimatedHours"
                          onBlur={[Function]}
                          onChange={[Function]}
                          step={1}
                          type="number"
                        />
                         
                      </div>
                    </div>
                    <div
                      className="flex flex-col space-y-2 text-left"
                    >
                      <label
                        htmlFor="description"
                      >
                        Descrição
                      </label>
                       
                      <textarea
                        className="resize-none form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                        defaultValue=""
                        name="description"
                        onBlur={[Function]}
                        onChange={[Function]}
                        rows={4}
                      />
                       
                    </div>
                    <div
                      className="modal-action"
                    >
                      <div
                        className="flex items-center justify-between gap-4 w-full mt-8"
                      >
                        <label
                          className=" bg-primary hover:bg-primaryHover border border-primary focus:ring-blue-500 focus:ring-offset-blue-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded"
                          htmlFor="course-create"
                        >
                          <button
                            className="py-2 px-4 h-full w-full"
                            type="submit"
                          >
                            Criar 
                          </button>
                        </label>
                        <label
                          className="py-2 px-4 bg-white hover:bg-gray-100 border border-primary  hover:border-primaryHover hover:text-primaryHover  text-primary w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded"
                          htmlFor="course-create"
                        >
                          Cancelar 
                        </label>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              className="h-10 my-8 bg-grayLight"
            />
            <div
              className="overflow-y-scroll no-scrollbar"
            >
              <div
                className="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 3xl:grid-cols-4 gap-6 pb-4"
              >
                <div>
                  CourseListCard
                </div>
              </div>
            </div>
          </div>
          <div
            className="m-8 hidden lg:block"
          >
            <div
              className="w-full h-full"
            >
              <h2
                className="text-xl font-bold"
              >
                Olá 
                Test User
              </h2>
              <div
                className="border-y-[1px] border-grayMedium my-4 py-4"
              >
                <div
                  className="grid grid-cols-4 lg:grid-cols-1 gap-y-4"
                >
                  <div>
                    <div
                      className="flex flex-row gap-2"
                    >
                      <div
                        className="w-3 h-3 rounded-full my-auto bg-success"
                      />
                      <p>
                        Publicado
                         cursos:
                      </p>
                      <p
                        className="font-bold"
                      >
                        0
                      </p>
                    </div>
                    <div
                      className="flex flex-row gap-2"
                    >
                      <div
                        className="w-3 h-3 rounded-full my-auto bg-[#ffc500]"
                      />
                      <p>
                        Rascunho
                         cursos:
                      </p>
                      <p
                        className="font-bold"
                      >
                        1
                      </p>
                    </div>
                    <div
                      className="flex flex-row gap-2"
                    >
                      <div
                        className="w-3 h-3 rounded-full my-auto bg-grayMedium"
                      />
                      <p>
                        Oculto
                         cursos:
                      </p>
                      <p
                        className="font-bold"
                      >
                        0
                      </p>
                    </div>
                    <div
                      className="flex flex-row gap-2 ml-5"
                    >
                      <p>
                        Total cursos:
                      </p>
                      <p
                        className="font-bold"
                        id="courseAmount"
                      >
                        1
                      </p>
                    </div>
                  </div>
                  <div>
                    <p>
                      Total alunos
                    </p>
                    <p
                      className="font-bold"
                      id="subscribers"
                    >
                      157
                    </p>
                  </div>
                  <div>
                    <p>
                      Avaliação
                    </p>
                    <div
                      className="w-[12rem] max-w-full"
                    >
                      <div
                        className="flex flex-row"
                      >
                        <svg
                          className="text-star"
                          role="presentation"
                          style={{}}
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
                            style={
                              {
                                "fill": "currentColor",
                              }
                            }
                          />
                        </svg>
                        <svg
                          className="text-star"
                          role="presentation"
                          style={{}}
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
                            style={
                              {
                                "fill": "currentColor",
                              }
                            }
                          />
                        </svg>
                        <svg
                          className="text-star"
                          role="presentation"
                          style={{}}
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
                            style={
                              {
                                "fill": "currentColor",
                              }
                            }
                          />
                        </svg>
                        <svg
                          className="text-star"
                          role="presentation"
                          style={{}}
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
                            style={
                              {
                                "fill": "currentColor",
                              }
                            }
                          />
                        </svg>
                        <svg
                          className="text-star"
                          role="presentation"
                          style={{}}
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12,15.4V6.1L13.71,10.13L18.09,10.5L14.77,13.39L15.76,17.67M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
                            style={
                              {
                                "fill": "currentColor",
                              }
                            }
                          />
                        </svg>
                        <p
                          className="text-star ml-1 text-2xl font-bold"
                        >
                          4.5
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <p
                  className="font-bold"
                >
                  Atividades
                </p>
                 
                <div
                  className="grid grid-cols-4 lg:grid-cols-1 gap-y-2"
                />
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>,
  <div
    className="Toastify"
  />,
]
`;

exports[`courses page shows empty state when no courses are found 1`] = `
[
  <div
    className="flex w-screen h-screen text-gray-700"
  >
    <div
      className="flex flex-col flex-grow"
    >
      <div
        className="navbar bg-base-100 border-b"
      >
        <div
          className="navbar-start"
        >
          <div
            className="dropdown"
          >
            <label
              className="btn btn-ghost lg:hidden"
              tabIndex={0}
            >
              <svg
                className="h-5 w-5"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 6h16M4 12h8m-8 6h16"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                />
              </svg>
            </label>
            <ul
              className="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52"
              tabIndex={0}
            >
              <li>
                <a
                  className="flex"
                  href="/courses"
                  onClick={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    stroke="currentColor"
                    strokeWidth={1.5}
                    viewBox="0 0 24 24"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 6.042A8.967 8.967 0 006 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 016 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 016-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0018 18a8.967 8.967 0 00-6 2.292m0-14.25v14.25"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                  <span>
                    Courses
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="flex"
                  href="/educado_admin/applications"
                  onClick={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    stroke="currentColor"
                    strokeWidth={1.5}
                    viewBox="0 0 24 24"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9 12.75L11.25 15 15 9.75m-3-7.036A11.959 11.959 0 013.598 6 11.99 11.99 0 003 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285z"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                  <span>
                    Admin
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <a
            className="flex flex-shrink-0 items-center space-x-3 normal-case text-xl"
            href="/"
            onClick={[Function]}
          >
            <img
              alt="ecs-logo"
              className="h-6"
              src=""
            />
          </a>
        </div>
        <div
          className="navbar-center hidden lg:flex"
        >
          <ul
            className="menu menu-horizontal p-0"
          >
            <li>
              <a
                className="flex tooltip tooltip-hover tooltip-bottom"
                data-tip="see your courses"
                href="/courses"
                onClick={[Function]}
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth={1.5}
                  viewBox="0 0 24 24"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 6.042A8.967 8.967 0 006 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 016 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 016-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0018 18a8.967 8.967 0 00-6 2.292m0-14.25v14.25"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
                <span>
                  Courses
                </span>
              </a>
            </li>
            <li>
              <a
                className="flex tooltip tooltip-hover tooltip-bottom"
                data-tip="Check Applications"
                href="/educado_admin/applications"
                onClick={[Function]}
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth={1.5}
                  viewBox="0 0 24 24"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 12.75L11.25 15 15 9.75m-3-7.036A11.959 11.959 0 013.598 6 11.99 11.99 0 003 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285z"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
                <span>
                  Admin
                </span>
              </a>
            </li>
          </ul>
        </div>
        <div
          className="navbar-end"
        >
          <button
            className="relative ml-auto text-sm focus:outline-none group"
          >
            <div
              className="dropdown dropdown-end"
            >
              <label
                className="btn btn-ghost hover:bg-transparent"
                tabIndex={0}
              >
                <div
                  className="flex items-center justify-between w-10 h-10 rounded"
                >
                  <div
                    className="block relative"
                  >
                    <div
                      className="avatar placeholder"
                    >
                      <div
                        className="bg-blue-500 text-white rounded-full hover:rounded w-10"
                      >
                        <span
                          className="text-md"
                        >
                          JD
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
              <ul
                className="menu dropdown-content p-2 shadow bg-base-100 rounded-box w-52 mt-4"
                tabIndex={0}
              >
                <li>
                  <a
                    href="/profile"
                    onClick={[Function]}
                  >
                    Settings
                  </a>
                </li>
                <li>
                  <a
                    className="w-full px-4 py-2 text-left hover:bg-blue-500 hover:text-white"
                    href="/login"
                    onClick={[Function]}
                  >
                    Sign out
                  </a>
                </li>
              </ul>
            </div>
          </button>
        </div>
      </div>
      <main
        className="flex-grow overflow-x-hidden bg-gradient-to-br from-[#c8e5ec] to-[white]"
      >
        <div
          className="grid lg:grid-cols-[3fr_1fr] h-full"
        >
          <div
            className="m-8 p-8 pb-0 bg-white rounded-xl overflow-hidden flex flex-col"
          >
            <div
              className="grid place-content-center w-full h-full text-center"
            >
              <div
                className="md:mx-40 xl:mx-64"
              >
                <img
                  className="w-full"
                  src=""
                />
                <h1
                  className="text-xl font-bold my-4"
                >
                  Comece agora
                </h1>
                <p>
                  Você ainda não criou nenhum curso. Clique no botão abaixo e siga o passo a passo para desenolver o seu primeiro curso.
                </p>
                <label
                  className="std-button flex modal-button  space-x-2"
                  htmlFor="course-create"
                >
                  <svg
                    aria-hidden="true"
                    className="w-5 h-5"
                    fill="none"
                    stroke="currentColor"
                    strokeWidth={1.5}
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                  <p
                    className="font-normal "
                  >
                    Criar novo curso
                  </p>
                   
                </label>
                <input
                  className="modal-toggle"
                  id="course-create"
                  type="checkbox"
                />
                <div
                  className="modal"
                  id="course-create-modal"
                >
                  <div
                    className="modal-box bg-gradient-to-b from-primaryLight rounded w-11/12 max-w-xl"
                  >
                    <h3
                      className="font-bold text-lg"
                    >
                      Crie seu novo curso!
                    </h3>
                     
                    <p
                      className="py-4"
                    >
                      Preencha o formulário e comece seu novo curso!
                    </p>
                     
                    <form
                      className="flex h-full flex-col justify-between space-y-4"
                      onSubmit={[Function]}
                    >
                      <div
                        className="flex flex-col space-y-2 text-left"
                      >
                        <label
                          htmlFor="title"
                        >
                          Título
                        </label>
                         
                        <input
                          className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                          defaultValue=""
                          name="title"
                          onBlur={[Function]}
                          onChange={[Function]}
                          type="text"
                        />
                         
                      </div>
                      <div
                        className="flex flex-col space-y-2 text-left"
                      >
                        <label
                          htmlFor="category"
                        >
                          Categoria
                        </label>
                         
                        <select
                          className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                          defaultValue="personal finance"
                          name="category"
                          onBlur={[Function]}
                          onChange={[Function]}
                        >
                          <option
                            value="personal finance"
                          >
                            Finanças pessoais
                          </option>
                          <option
                            value="health and workplace safety"
                          >
                            Saúde e Segurança no Trabalho
                          </option>
                          <option
                            value="sewing"
                          >
                            Costura
                          </option>
                          <option
                            value="electronics"
                          >
                            Eletrônica
                          </option>
                        </select>
                         
                      </div>
                      <div
                        className="flex items-center gap-8 w-full mt-8"
                      >
                        <div
                          className="flex flex-col space-y-2 text-left"
                        >
                          <label
                            htmlFor="cover-image"
                          >
                            Imagem de capa
                          </label>
                           
                          <div>
                            <div
                              className="mt-1 flex justify-center rounded-md border-2 border-dashed border-gray-600 px-10 pt-5 pb-6"
                            >
                              <div
                                className="space-y-1 text-center"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="mx-auto h-6 w-6 text-gray-600"
                                  fill="none"
                                  stroke="currentColor"
                                  viewBox="0 0 48 48"
                                >
                                  <path
                                    d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02"
                                    strokeLinecap="round"
                                    strokeLinejoin="round"
                                    strokeWidth={2}
                                  />
                                </svg>
                                <div
                                  className="flex text-sm text-gray-600"
                                >
                                  <label
                                    className="relative cursor-pointer rounded-md  font-medium text-primary focus-within:outline-none focus-within:ring-2 focus-within:ring-primary focus-within:ring-offset-2 hover:text-primaryHover"
                                    htmlFor="file-upload"
                                  >
                                    <span>
                                      Upload a file 
                                    </span>
                                    <input
                                      accept="image/*"
                                      className="sr-only"
                                      id="file-upload"
                                      name="file-upload"
                                      onChange={[Function]}
                                      type="file"
                                    />
                                  </label>
                                </div>
                              </div>
                            </div>
                          </div>
                           
                           
                        </div>
                        <div
                          className="flex flex-col space-y-2 text-left"
                        >
                          <label
                            htmlFor="level"
                          >
                            Nível
                          </label>
                           
                          <select
                            className="small-form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                            name="difficulty"
                            onBlur={[Function]}
                            onChange={[Function]}
                          >
                            <option
                              value={1}
                            >
                              Iniciante 
                            </option>
                             
                            <option
                              value={2}
                            >
                              Intermediário
                            </option>
                             
                            <option
                              value={3}
                            >
                              Avançado 
                            </option>
                             
                          </select>
                           
                        </div>
                        <div
                          className="flex flex-col space-y-2 text-left"
                        >
                          <label
                            htmlFor="title"
                          >
                            Tempo estimado
                          </label>
                           
                          <input
                            className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                            defaultValue=""
                            min={0}
                            name="estimatedHours"
                            onBlur={[Function]}
                            onChange={[Function]}
                            step={1}
                            type="number"
                          />
                           
                        </div>
                      </div>
                      <div
                        className="flex flex-col space-y-2 text-left"
                      >
                        <label
                          htmlFor="description"
                        >
                          Descrição
                        </label>
                         
                        <textarea
                          className="resize-none form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                          defaultValue=""
                          name="description"
                          onBlur={[Function]}
                          onChange={[Function]}
                          rows={4}
                        />
                         
                      </div>
                      <div
                        className="modal-action"
                      >
                        <div
                          className="flex items-center justify-between gap-4 w-full mt-8"
                        >
                          <label
                            className=" bg-primary hover:bg-primaryHover border border-primary focus:ring-blue-500 focus:ring-offset-blue-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded"
                            htmlFor="course-create"
                          >
                            <button
                              className="py-2 px-4 h-full w-full"
                              type="submit"
                            >
                              Criar 
                            </button>
                          </label>
                          <label
                            className="py-2 px-4 bg-white hover:bg-gray-100 border border-primary  hover:border-primaryHover hover:text-primaryHover  text-primary w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded"
                            htmlFor="course-create"
                          >
                            Cancelar 
                          </label>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="m-8 hidden lg:block"
          >
            <div
              className="w-full h-full"
            >
              <h2
                className="text-xl font-bold"
              >
                Olá 
                Test User
              </h2>
              <div
                className="border-y-[1px] border-grayMedium my-4 py-4"
              >
                <div
                  className="grid grid-cols-4 lg:grid-cols-1 gap-y-4"
                >
                  <p
                    className="italic"
                    id="noCourses"
                  >
                    Não há dados suficiente
                  </p>
                </div>
              </div>
              <div>
                <p
                  className="font-bold"
                >
                  Atividades
                </p>
                 
                <div
                  className="grid grid-cols-4 lg:grid-cols-1 gap-y-2"
                >
                  <p
                    className="italic"
                  >
                    Nenhuma atividade
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>,
  <div
    className="Toastify"
  />,
]
`;
